--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,9 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>com.example.rewear/com.example.rewear.HelloApplication</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
+                            <launcher>com.example.rewear.gestionuser.app</launcher>
+                            <jlinkZipName>com.example.rewear.gestionuser.app</jlinkZipName>
+                            <jlinkImageName>com.example.rewear.gestionuser.app</jlinkImageName>
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
