--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.rewear/com.example.rewear.HelloApplication</mainClass>
+                            <mainClass>com.example.rewear.MainFX</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
