--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.rewear/com.example.rewear.HelloApplication</mainClass>
+                            <mainClass>com.example.rewear.gestionuser.app.Main</mainClass>
                             <launcher>com.example.rewear.gestionuser.app</launcher>
                             <jlinkZipName>com.example.rewear.gestionuser.app</jlinkZipName>
                             <jlinkImageName>com.example.rewear.gestionuser.app</jlinkImageName>
